@@ -87,7 +87,7 @@ int main(int argc, char *argv[]) {
 	return 0;
 }
 EOF
-	pkgconfig libt3widget/0.5.3 LIBT3WIDGET test_link_cxx_with_flags || \
+	pkgconfig libt3widget/0.6.0 LIBT3WIDGET test_link_cxx_with_flags || \
 		error "!! Can not find libt3widget. libt3widget is required to compile tilde."
 
 	clean_cxx
