@@ -36,9 +36,11 @@ ENUM(action_id_t,
 	EDIT_SELECT_ALL,
 	EDIT_MARK,
 	EDIT_INSERT_CHAR,
-	EDIT_INDENT_SELECTION,
-	EDIT_UNINDENT_SELECTION,
+	TOOLS_INDENT_SELECTION,
+	TOOLS_UNINDENT_SELECTION,
+	EDIT_PASTE_SELECTION,
 	EDIT_TOGGLE_INSERT,
+	EDIT_DELETE_LINE,
 	SEARCH_SEARCH,
 	SEARCH_AGAIN,
 	SEARCH_AGAIN_BACKWARD,
