@@ -4,6 +4,8 @@ Version 0.4.0:
 	  current user. This is ever so slightly more risky than creating a
 	  temporary file and moving it over the existing one, which is the default
 	  behavior.
+	- Add menu items for the new Paste Selection (which pastes the X11 primary
+	  selection) and for the new Delete Line actions.
 
 Version 0.3.9:
 	Minor updates to Makefile.in for compatibility with Debian packaging.
